# heavylight

./: .gitignore  404.html  LICENSE  Pipfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  scratch.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  python-package.yml
api/heavylight_Model/: index.html
api/heavylight_Table/: index.html
api/lightmodel/: index.html
developer-setup/: environment-notes.md
docs/: index.md  memory_optimization_theory.md  storage_function.md  tables.md  term_assurance_graph.html
docs/api/: heavylight_Table.md  lightmodel.md
docs/experiments/: index.md
docs/getting_started/: heavylight_tables.ipynb  intro_to_heavylight.ipynb
docs/theory/: memory_optimization.md  recursive_life_insurance.ipynb  vectorized_models.ipynb
examples/: basic_cashflow.py  readme.md  readme_example.py
examples/memory_optimizations/: example.ipynb  nice_agg_function.py
examples/notebook/: docs_check_tables_md.ipynb  heavylight_basic.ipynb  heavylight_local.py  heavylight_tables.ipynb  safe_string_table_lookup.ipynb  sample_q_x_table.csv  string_lookup_investigation.ipynb  super_init_example.ipynb  table_bounds_check.ipynb  table_docs.ipynb  table_documentation.ipynb  table_documentation.md  table_maker.ipynb  test_tables_v1.0.7.ipynb  using_dataclasses.ipynb  vectors.ipynb  vectors.py
examples/notebook/example_tables/: 2017_loaded_CSO_mortality_rates_heavytable.csv
examples/std_model/: protection_model.py  run_model.py
examples/std_model/tables/: covert_q_x_tables.ipynb  forward_rates.csv  q_x_generic.csv  qx_generic_raw.csv
examples/std_model_numpy/: protection_model.py  run_model.py
examples/std_model_numpy/tables/: q_x_generic.csv  uk_zero_spot.csv
experiments/: index.html  term_assurance_graph.html
getting_started/heavylight_tables/: index.html
getting_started/intro_to_heavylight/: index.html
search/: search_index.json
src/heavylight/: __init__.py  alpha_multivalue_table.py  cache_graph.py  heavylight.py  heavytables.py  make_examples.py  memory_optimized_cache.py  memory_optimized_model.py
src/heavylight/examples/protection/: protection_model_base.py  protection_model_mo.py  protection_risk_model_generic.xlsx  readme.md  run_model_base.py  run_model_mo.py  run_model_np.py
src/heavylight/examples/template/: model.py
storage_function/: index.html
tables/: index.html
temp/: getmembers_replacement.ipynb  goalseek.ipynb  tables_methodology.ipynb
tests/: test_alpha_multivalue_table.py  test_cache_graph.py  test_examples.py  test_heavylight.py  test_heavytables.py  test_lightmodel.py  test_lightmodel_df.py  test_memory_optimizations.py  test_memory_savings.py  test_optimizations.py  test_optimized_cache.py  test_optimized_model.py  test_simple_model.py  test_storage_function.py  test_table.csv
theory/memory_optimization/: index.html
theory/recursive_life_insurance/: index.html
theory/vectorized_models/: index.html
