[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
src-dir = "src"

[project]
name = "heavylight"
version = "1.0.6"
authors = [
  { name="Lewis Fogden", email="lewisfogden@gmail.com" },
  { name="Matthew Caseres", email="matthewcaseres@outlook.com"}
]
description = "Heavylight Actuarial Modelling Framework"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov",
    "pytest-timeout",
    "numpy"
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-jupyter"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lewisfogden/heavylight/"
"Bug Tracker" = "https://github.com/lewisfogden/heavylight/issues"
"Documentation" = "https://lewisfogden.github.io/heavylight/"
